Settings layout almost finished. Regarding the layout I still have to implement the alert dialogs with radio buttons and change some colors. Also made the drawer close when navigating back from the WeatherMapFragment or SettingsFragment.

--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -4,7 +4,7 @@
     android:layout_height="@dimen/drawer_header_height"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:background="@color/clear_sky_top_bar">
+    android:background="@color/light_blue_active">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="@dimen/app_icon_size"
