--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,7 +11,7 @@
 
     <include
         android:id="@+id/app_bar"
-        layout="@layout/app_bar"
+        layout="@layout/app_bar_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -24,7 +24,7 @@
         app:headerLayout="@layout/drawer_header"
         app:menu="@menu/drawer_menu"
         android:background="@color/white"
-        app:itemIconTint="@color/gray_icon"
-        app:itemTextColor="@color/gray_icon"/>
+        app:itemIconTint="@color/gray_3"
+        app:itemTextColor="@color/gray_3"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
