--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="drawer_header_height">120dp</dimen>
     <dimen name="back_icon_padding">5dp</dimen>
     <dimen name="drawer_title_margin_start">50dp</dimen>
+    <dimen name="setting_element_distance">15dp</dimen>
+    <dimen name="settings_sector_title_size">15sp</dimen>
+    <dimen name="setting_title_text_size">17sp</dimen>
+    <dimen name="line_view_height">1dp</dimen>
 </resources>
