Settings layout finished and fully interactional. Fixed all the previous issues but the hardcoded colors in app_bar_view_pager.xml. Creating an theme with those colors and applying it makes the indicator bar to disappear and the ripple effect to act wrong. I suggest you also take a look at strings.xml because I am not sure I understood the naming convention with lbl_ and msg_ prefixes. I changed the font and colors to match the ones used in the original app. I added some enum classes for every type of setting and with the help of those classes I now can show custom alert dialogs with radio button for every setting. Also I added a condition that allows selecting the notification type only if the show weather in notification option is checked. If there are no other things that I should change or add I think the next thing to be implemented should be the settings data source for storing all setting preferences.

--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/light_blue_active">
+        android:background="@color/blue_2">
 
         <ImageView
             android:id="@+id/back_button"
@@ -27,7 +27,7 @@
             android:layout_marginStart="@dimen/drawer_title_margin_start"
             android:textColor="@color/white"
             android:textSize="@dimen/drawer_title_size"
-            tools:text="@string/settings_title" />
+            tools:text="@string/lbl_settings_title" />
 
     </androidx.appcompat.widget.Toolbar>
 </com.google.android.material.appbar.AppBarLayout>
