--- a/app/src/main/res/layout/app_bar_view_pager.xml
+++ b/app/src/main/res/layout/app_bar_view_pager.xml
@@ -19,7 +19,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/light_blue_active">
+            android:background="@color/blue_2">
 
             <ImageView
                 android:id="@+id/drawer_button"
@@ -34,27 +34,27 @@
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/light_blue_active"
+            android:background="@color/blue_2"
             app:tabGravity="center"
-            app:tabRippleColor="@color/light_blue_inactive"
+            app:tabRippleColor="@color/dark_inactive_text"
             app:tabSelectedTextColor="@color/white"
-            app:tabTextColor="@color/light_blue_inactive"
+            app:tabTextColor="@color/dark_inactive_text"
             app:tabIndicatorColor="@color/white">
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/today_tab" />
+                android:text="@string/lbl_today_tab" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tomorrow_tab" />
+                android:text="@string/lbl_tomorrow_tab" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/ten_days_tab" />
+                android:text="@string/lbl_ten_days_tab" />
 
         </com.google.android.material.tabs.TabLayout>
     </com.google.android.material.appbar.AppBarLayout>
@@ -63,8 +63,6 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar"
         app:layout_constraintBottom_toBottomOf="parent" />
 
