--- a/app/src/main/res/layout/setting_check_box.xml
+++ b/app/src/main/res/layout/setting_check_box.xml
@@ -6,26 +6,27 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/setting_tab_ripple"
-    android:orientation="horizontal"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tab_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="@integer/material_motion_duration_long_1"
+        android:fontFamily="@font/pluto_sans_cond_light"
         android:padding="@dimen/setting_element_distance"
         android:textColor="@color/gray_2"
         android:textSize="@dimen/setting_title_text_size"
-        tools:text="@string/detect_location_menu_title" />
+        tools:text="@string/lbl_detect_location_menu_title" />
 
     <CheckBox
         android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:clickable="false"
         android:layoutDirection="rtl"
-        android:padding="@dimen/setting_element_distance"
-        android:clickable="false"/>
+        android:padding="@dimen/setting_element_distance" />
 
 </LinearLayout>
