--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,15 +3,16 @@
     <style name="Theme.FrogWeather" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/blue_2</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/orange</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:navigationBarColor">@color/white</item>
     </style>
 
     <style name="Theme.FrogWeather.NoActionBar">
@@ -21,9 +22,29 @@
 
     <style name="Theme.TabLayout.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
+    <style name="TabLayoutTheme">
+        <item name="tabIndicatorColor">@color/black</item>
+        <item name="rippleColor">@color/light_inactive_text</item>
+        <item name="tabSelectedTextColor">@color/white</item>
+        <item name="tabTextColor">@color/light_inactive_text</item>
+    </style>
+
     <style name="roundedImageView">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
+    </style>
+
+    <style name="SettingsDialogTheme.Button" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/gray_2</item>
+        <item name="backgroundColor">@color/white</item>
+    </style>
+
+    <style name="SettingsDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/gray_2</item>
+        <item name="android:fontFamily">@font/pluto_sans_cond_light</item>
+        <item name="android:colorControlActivated">@color/orange</item>
+        <item name="android:buttonBarButtonStyle">@style/SettingsDialogTheme.Button</item>
     </style>
 
 </resources>
