--- a/app/src/main/res/layout/fragment_one_day.xml
+++ b/app/src/main/res/layout/fragment_one_day.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.TodayFragment"
+    tools:context=".ui.OneDayFragment"
     android:background="@color/dark_toolbar">
 </FrameLayout>
