--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,53 @@
     <dimen name="settings_sector_title_size">15sp</dimen>
     <dimen name="setting_title_text_size">17sp</dimen>
     <dimen name="line_view_height">1dp</dimen>
+    <dimen name="current_weather_text_size">15sp</dimen>
+    <dimen name="current_weather_text_margin">10dp</dimen>
+    <dimen name="current_weather_temperature_text_size">100sp</dimen>
+    <dimen name="current_weather_temperature_unit_margin">20dp</dimen>
+    <dimen name="current_weather_temperature_unit_text_size">30sp</dimen>
+    <dimen name="current_weather_icon_size">125dp</dimen>
+    <dimen name="current_weather_layout_padding">15dp</dimen>
+    <dimen name="short_precipitation_icon_size">20dp</dimen>
+    <dimen name="short_precipitation_icon_vertical_margin">10dp</dimen>
+    <dimen name="short_precipitation_icon_horizontal_margin">15dp</dimen>
+    <dimen name="short_precipitation_text_size">20sp</dimen>
+    <dimen name="details_text_size">15sp</dimen>
+    <dimen name="details_labels_margin_top">15dp</dimen>
+    <dimen name="details_values_margin_end">30dp</dimen>
+    <dimen name="details_labels_divider">5dp</dimen>
+    <dimen name="details_labels_margin_bottom">15dp</dimen>
+    <dimen name="details_title_margin">20dp</dimen>
+    <dimen name="details_layout_margin">10dp</dimen>
+    <dimen name="hourly_weather_padding">15dp</dimen>
+    <dimen name="hourly_weather_text_size">15sp</dimen>
+    <dimen name="hourly_weather_precipitation_margin">5dp</dimen>
+    <dimen name="hourly_weather_temperature_margin">10dp</dimen>
+    <dimen name="hourly_weather_icon_size">35dp</dimen>
+    <dimen name="hourly_weather_time_margin">5dp</dimen>
+    <dimen name="precipitation_title_margin">20dp</dimen>
+    <dimen name="precipitation_text_size">15sp</dimen>
+    <dimen name="precipitation_volume_margin_bottom">15dp</dimen>
+    <dimen name="precipitation_hourly_margin_top">10dp</dimen>
+    <dimen name="precipitation_hourly_margin_start">20dp</dimen>
+    <dimen name="precipitation_chance_margin_top">10dp</dimen>
+    <dimen name="hourly_precipitation_padding">15dp</dimen>
+    <dimen name="hourly_precipitation_text_size">15sp</dimen>
+    <dimen name="hourly_precipitation_icon_size">35dp</dimen>
+    <dimen name="hourly_precipitation_margin">10dp</dimen>
+    <dimen name="wind_text_size_small">15sp</dimen>
+    <dimen name="wind_text_size_large">55sp</dimen>
+    <dimen name="wind_text_size_medium">17sp</dimen>
+    <dimen name="wind_elements_horizontal_distance">20dp</dimen>
+    <dimen name="wind_elements_vertical_distance">10dp</dimen>
+    <dimen name="wind_speed_value_margin_start">25dp</dimen>
+    <dimen name="wind_direction_icon_width">15dp</dimen>
+    <dimen name="wind_direction_icon_height">30dp</dimen>
+    <dimen name="hourly_wind_vertical_margin">5dp</dimen>
+    <dimen name="hourly_wind_text_size">15sp</dimen>
+    <dimen name="hourly_wind_horizontal_padding">10dp</dimen>
+    <dimen name="hourly_wind_default_speed_icon_size">35dp</dimen>
+    <dimen name="wind_recycler_view_top_margin">20dp</dimen>
+    <dimen name="line_view_size">2dp</dimen>
+    <dimen name="wind_layout_top_margin">10dp</dimen>
 </resources>
