--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.FrogWeather" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
@@ -21,14 +21,6 @@
     </style>
 
     <style name="Theme.TabLayout.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="TabLayoutTheme">
-        <item name="android:background">@color/blue_2</item>
-        <item name="tabIndicatorColor">@color/white</item>
-        <item name="rippleColor">@color/light_inactive_text</item>
-        <item name="tabSelectedTextColor">@color/white</item>
-        <item name="tabTextColor">@color/light_inactive_text</item>
-    </style>
 
     <style name="roundedImageView">
         <item name="cornerFamily">rounded</item>
