--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="cyan2">#15C9CA</color>
 
     <color name="gray_1">#DCDCDC</color>
-    <color name="gray_2">#A2A2A2</color>
+    <color name="gray_2"># </color>
     <color name="gray_3">#757575</color>
     <color name="gray_4">#86A3AB</color>
 
